GNOME Bugzilla – Bug 788041
deinterlace: Fixed memory leak in error code path.
Last modified: 2017-09-22 14:27:31 UTC
Fixed memory leak in error code path in gst_deinterlace_setcaps(). Patch file is attached. Please provide the feedback.
Created attachment 360249 [details] [review] PatchFile
Review of attachment 360249 [details] [review]: Thanks for the patch, it's correct. But while we're at it, some other minor cleanup can also be done: ::: gst/deinterlace/gstdeinterlace.c @@ +2814,2 @@ if (srccaps) gst_caps_unref (srccaps); srccaps are always not NULL here and in the set_caps_failed case
Created attachment 360254 [details] [review] updatedPatch Review comments updated.
commit 49ed67c4f23e4d494f52147c07c447eff61a6ef0 (HEAD -> master) Author: Deepak Srivastava <srivastava.d@samsung.com> Date: Fri Sep 22 16:55:21 2017 +0530 deinterlace: Fixed memory leak in error code path https://bugzilla.gnome.org/show_bug.cgi?id=788041