deinterlace: Fixed memory leak in error code path

https://bugzilla.gnome.org/show_bug.cgi?id=788041